# PSMM

./: .gitignore  CITATION.cff  CMakeLists.txt  Known180  LICENSE-DATA  README.md  arguments.h  factorizer.h  mahlerestimator.h  polyconvert.h  polyhelpers.h  polyiterator.h  polyproperties.h  psmm.cpp  psmm.h  rootfinder.h  utilities.h
cmake/: FindGMP.cmake  FindGMPXX.cmake  FindMPSOLVE.cmake  FindNTL.cmake
doc/: DB-FORMAT.md  FAMILIES.md  SCOPE.md  ad_sweep.csv  champion-analysis.md  database-verification.csv  new_finds_2_12_minus.txt  new_finds_2_3_plus.txt  new_finds_d_only.txt  new_finds_d_only_pn_extended.txt  new_finds_d_only_pn_extended_part2.txt  parametric-family-convergence-2_12.csv  parametric-family-convergence-2_3_plus.csv  parametric-family.csv
mpsolve/: CMakeLists.txt  README.md  upstream-version.cmake
mpsolve/include/: interface.h
mpsolve/patches/: 0001-advanpix-mahler-early-exit-api.patch  0002-advanpix-fix-mahler-early-exit-threshold.patch  0003-advanpix-defensive-mpf-set-rdpe.patch  0004-upstream-radius-overflow-fix.patch
mpsolve/src/libmps/unisolve/: main.c
tests/: CMakeLists.txt  gen-reference.sh  test_factorizer.cpp  test_helpers.h  test_iterator.cpp  test_mahler_early_exit.cpp  test_mahler_reference.cpp  test_merge_dedup.cpp
tests/data/: reference-polynomials.txt
tools/: analyze_champions.py  annotate_ad_sweep.py  bulk_verify.py  calibrate_psmm.py  compute_boyd_lawton.py  compute_boyd_lawton_family.py  compute_roots.py  extract_parametric_finds.py  factor_2_12_minus_reducibles.py  factor_5term_reducibles.py  inject_scan_roots.py  patch_db_mismatches.py  patch_mahler_from_verify.py  plot_db_bands.py  plot_parametric_family.py  plot_root_heatmap.py  plot_two_family_convergence.py  poly_analyze.py  recompute_pari_mahler.py  render_champions.py  scan_5term_salem.py  scan_ad_below_14.py  scan_parametric_family.py  scan_pn_convergence.py  sweep_ad.py  sweep_perturbations.py  verify_db_uniqueness.py
